--- a/index.html
+++ b/index.html
@@ -5,13 +5,34 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title></title>
+    <title>Háttértárak</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+        <h1>Érettségi tétel: Háttértárak</h1>
+        <h2>1.Háttértárak története</h2>
+        <p>A háttértárak olyan adattárolók amelyek a számítógép kikapcsolása után is megőrtzik tartalmukat. 
+        A háttértárakat már az ötvenes évektől használjuk. Az első háttértár a mágnesszalag volt amelyet audio fájlok tárolására használtak. Adatelérése szekvenciális éd ezért lassú mert soros elérésű. Napjainkban tömegtárként használjuk őket.</p>
+        <p>A mágneslemez egy keménymágneses anyaggal bevont lemez. A mágneslemez mindkét oldalához tartozik egy író-olvasó fej és az oldalai sávokra vannak osztva.</p>
+        <p>Az optikai háttértárakat a 80-as évektől használjuk. Az első gyártók a Sony és a Philips akik megalkották a CD-DA szabványt.'" cm és 7 cm átmérőbe szabványosították a lemez közepén egy furattal.</p>
+        <p>Az elektronikus háttértárak (SSD:Solid State Drive) a legmodernebb szabvány. Megjelenése óta egyre több helyen felváltja a merevlemezt.</p>
+        <h2>2.A merevlemez felépítése és működése</h2>
+        <p>A merevlemez az adatokat mágnesezhető réteggel bevont lemezeken tárolja, melyet a forgó lemez fölött mozgó író/olvasó fej ír vagy olvas.
+        A lemezek állandóan forognak, forgási sebességüket rpm-ben adják meg. Ez általában 5400–7200, de léteznek 10 000–15 000 rpm-es modellek is.
+        A fej körülbelül 1 (Hitachi, régebben IBM meghajtókban 0,19) nanométeres légpárnán repül a lemez felett, ezért egy apró porszem is tönkreteheti azt.</p>
+        <p>Egy winchesterben több lemez is lehet, és jellemzően a lemez mindkét oldalát használják adattárolásra, így a lemezekhez általában két fej tartozik: alul-felül egy. Mivel az azonos fej- és lemezszámú meghajtók kapacitása eltérő lehet, a végleges kapacitást és az adattárolásra használt területeket a gyártás során úgynevezett szervóírással alakítják ki.
+        A HDD-beli lemezeket azonos központú, különböző sugarú körök tagolják, ezeket sávoknak (trackeknek) nevezzük. A sávok azonosítása számokkal történik, a legkülső sáv a 0-s sorszámú. Azokat a sávokat, melyek egymás alatt helyezkednek el, cilindernek nevezzük. A sávokat tovább lehet bontani ún. szektorokra. Ezeket is sorszámozzák, ezek eggyel kezdődnek.
+         A HDD gyártás során kialakított szektorokat a meghajtó formázása közben csoportosíthatjuk, így alakíthatunk ki helyfoglalási egységeket, azaz clustereket.</p>
+        <h2>3.Az SSD felépítése</h2>
+        <p>Az SSD magyarul szilárdtest-meghajtó, flash memóriás tároló. Félvezetőkkel megvalósított mozgó alkatrészek nélküli adattároló, amely merevlemezként csatlakoztatható a számítógépekhez. Az SSD a Solid State Drive angol szavakból alkotott betűszó.
+        Az SSD egy olyan adattároló eszköz, ami félvezetős memóriában őrzi a tárolt adatot, azt
+        hosszú ideig megőrzi (állandó tár), a környezetéhez emulált merevlemezcsatlakozófelülettel csatlakozik, tehát lényegében egy mozgó alkatrészeket nem tartalmazómerevlemeznek tekinthető</p>
+        <h2>4.Milyen célból érdemes elektronikus háttértárat venni?</h2>
+        <p>Az SSD jobban tűri a rázkódást mivel nincsen benne mozgó alkatrész, emellett kisebb az áramfelvétele, mint a merevlemeznek. Elérési ideje kisebb, mint a merevlemeznek és zajtalan is.
+        Rögzítésénél csak a csatlakozók egybentartására kell figyelni, az eszköz akár szabadon is "lóghat". Felsőbb árkategóriába az SSD olvasási sebessége 540MB/s és az írási sebessége 520MB/s is lehet.    
+        </p>              
 </body>
 <script src="java.js"></script>
 </html>
