--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
     <title>Háttértárak</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
         <h1>Érettségi tétel: Háttértárak</h1>
         <h2>1.Háttértárak története</h2>
-        <p>A háttértárak olyan adattárolók amelyek a számítógép kikapcsolása után is megőrtzik tartalmukat. 
-        A háttértárakat már az ötvenes évektől használjuk. Az első háttértár a mágnesszalag volt amelyet audio fájlok tárolására használtak. Adatelérése szekvenciális éd ezért lassú mert soros elérésű. Napjainkban tömegtárként használjuk őket.</p>
+        <p>A háttértárak olyan adattárolók amelyek a számítógép kikapcsolása után is megőrtzik tartalmukat. A háttértárakat már az ötvenes évektől használjuk.</p> 
+        <p>Az első háttértár a mágnesszalag volt amelyet audio fájlok tárolására használtak. Adatelérése szekvenciális éd ezért lassú mert soros elérésű. Napjainkban tömegtárként használjuk őket.</p>
         <p>A mágneslemez egy keménymágneses anyaggal bevont lemez. A mágneslemez mindkét oldalához tartozik egy író-olvasó fej és az oldalai sávokra vannak osztva.</p>
         <p>Az optikai háttértárakat a 80-as évektől használjuk. Az első gyártók a Sony és a Philips akik megalkották a CD-DA szabványt.'" cm és 7 cm átmérőbe szabványosították a lemez közepén egy furattal.</p>
         <p>Az elektronikus háttértárak (SSD:Solid State Drive) a legmodernebb szabvány. Megjelenése óta egyre több helyen felváltja a merevlemezt.</p>
+        <h4>Képek:</h4>
+        <img src="merevlemez.jpg"><img src="cd-da.jpg"> <img src="floppy_disc.jpg">
         <h2>2.A merevlemez felépítése és működése</h2>
         <p>A merevlemez az adatokat mágnesezhető réteggel bevont lemezeken tárolja, melyet a forgó lemez fölött mozgó író/olvasó fej ír vagy olvas.
         A lemezek állandóan forognak, forgási sebességüket rpm-ben adják meg. Ez általában 5400–7200, de léteznek 10 000–15 000 rpm-es modellek is.
@@ -32,7 +35,7 @@
         <h2>4.Milyen célból érdemes elektronikus háttértárat venni?</h2>
         <p>Az SSD jobban tűri a rázkódást mivel nincsen benne mozgó alkatrész, emellett kisebb az áramfelvétele, mint a merevlemeznek. Elérési ideje kisebb, mint a merevlemeznek és zajtalan is.
         Rögzítésénél csak a csatlakozók egybentartására kell figyelni, az eszköz akár szabadon is "lóghat". Felsőbb árkategóriába az SSD olvasási sebessége 540MB/s és az írási sebessége 520MB/s is lehet.    
-        </p>              
+        </p>         
 </body>
 <script src="java.js"></script>
 </html>
