--- a/index.html
+++ b/index.html
@@ -13,29 +13,36 @@
 </head>
 <body>
         <h1>Érettségi tétel: Háttértárak</h1>
-        <h2>1.Háttértárak története</h2>
+        <ins><h2>1.Háttértárak története</h2></ins>
         <p>A háttértárak olyan adattárolók amelyek a számítógép kikapcsolása után is megőrtzik tartalmukat. A háttértárakat már az ötvenes évektől használjuk.</p> 
         <p>Az első háttértár a mágnesszalag volt amelyet audio fájlok tárolására használtak. Adatelérése szekvenciális éd ezért lassú mert soros elérésű. Napjainkban tömegtárként használjuk őket.</p>
         <p>A mágneslemez egy keménymágneses anyaggal bevont lemez. A mágneslemez mindkét oldalához tartozik egy író-olvasó fej és az oldalai sávokra vannak osztva.</p>
-        <p>Az optikai háttértárakat a 80-as évektől használjuk. Az első gyártók a Sony és a Philips akik megalkották a CD-DA szabványt.'" cm és 7 cm átmérőbe szabványosították a lemez közepén egy furattal.</p>
+        <p>Az optikai háttértárakat a 80-as évektől használjuk. Az első gyártók a Sony és a Philips akik megalkották a CD-DA szabványt. 12 cm és 7 cm átmérőbe szabványosították a lemez közepén egy furattal.</p>
         <p>Az elektronikus háttértárak (SSD:Solid State Drive) a legmodernebb szabvány. Megjelenése óta egyre több helyen felváltja a merevlemezt.</p>
         <h4>Képek:</h4>
         <img src="merevlemez.jpg"><img src="cd-da.jpg"> <img src="floppy_disc.jpg">
-        <h2>2.A merevlemez felépítése és működése</h2>
+        <ins><h2>2.A merevlemez felépítése és működése</h2></ins>
         <p>A merevlemez az adatokat mágnesezhető réteggel bevont lemezeken tárolja, melyet a forgó lemez fölött mozgó író/olvasó fej ír vagy olvas.
         A lemezek állandóan forognak, forgási sebességüket rpm-ben adják meg. Ez általában 5400–7200, de léteznek 10 000–15 000 rpm-es modellek is.
         A fej körülbelül 1 (Hitachi, régebben IBM meghajtókban 0,19) nanométeres légpárnán repül a lemez felett, ezért egy apró porszem is tönkreteheti azt.</p>
         <p>Egy winchesterben több lemez is lehet, és jellemzően a lemez mindkét oldalát használják adattárolásra, így a lemezekhez általában két fej tartozik: alul-felül egy. Mivel az azonos fej- és lemezszámú meghajtók kapacitása eltérő lehet, a végleges kapacitást és az adattárolásra használt területeket a gyártás során úgynevezett szervóírással alakítják ki.
         A HDD-beli lemezeket azonos központú, különböző sugarú körök tagolják, ezeket sávoknak (trackeknek) nevezzük. A sávok azonosítása számokkal történik, a legkülső sáv a 0-s sorszámú. Azokat a sávokat, melyek egymás alatt helyezkednek el, cilindernek nevezzük. A sávokat tovább lehet bontani ún. szektorokra. Ezeket is sorszámozzák, ezek eggyel kezdődnek.
          A HDD gyártás során kialakított szektorokat a meghajtó formázása közben csoportosíthatjuk, így alakíthatunk ki helyfoglalási egységeket, azaz clustereket.</p>
-        <h2>3.Az SSD felépítése</h2>
+        <ins><h2>3.Az SSD felépítése</h2></ins>
         <p>Az SSD magyarul szilárdtest-meghajtó, flash memóriás tároló. Félvezetőkkel megvalósított mozgó alkatrészek nélküli adattároló, amely merevlemezként csatlakoztatható a számítógépekhez. Az SSD a Solid State Drive angol szavakból alkotott betűszó.
         Az SSD egy olyan adattároló eszköz, ami félvezetős memóriában őrzi a tárolt adatot, azt
         hosszú ideig megőrzi (állandó tár), a környezetéhez emulált merevlemezcsatlakozófelülettel csatlakozik, tehát lényegében egy mozgó alkatrészeket nem tartalmazómerevlemeznek tekinthető</p>
-        <h2>4.Milyen célból érdemes elektronikus háttértárat venni?</h2>
-        <p>Az SSD jobban tűri a rázkódást mivel nincsen benne mozgó alkatrész, emellett kisebb az áramfelvétele, mint a merevlemeznek. Elérési ideje kisebb, mint a merevlemeznek és zajtalan is.
-        Rögzítésénél csak a csatlakozók egybentartására kell figyelni, az eszköz akár szabadon is "lóghat". Felsőbb árkategóriába az SSD olvasási sebessége 540MB/s és az írási sebessége 520MB/s is lehet.    
-        </p>         
+        <ins><h2>4.Milyen célból érdemes elektronikus háttértárat venni?</h2></ins>
+        <table><tr><th>SSD előnyei a HDD-vel szemben:</tr>
+            <tr><td>-Az SSD a merevlemezekhez hasonlóan adattárolásra alkalmas új eszköz, csak sokkal gyorsabb.</td></tr>
+            <tr><td>-Az olvasási sebessége 6x 7x gyorsabb, mint a hagyományos HDD-nek.</td></tr>
+            <tr><td>-Az SSD-ben nincs mozgó alkatrész, nincs motor ami hajtsa.</td></tr>
+            <tr><td>-Alacsonyabb a fogyasztása.</td></tr>
+            <tr><td>-Könnyebb is és így maga a laptop egy HDD cserénél veszít is a súlyából.</td></tr>
+            <tr><td>-Felsőbb árkategóriába az SSD olvasási sebessége 540MB/s és az írási sebessége 520MB/s is lehet.</td></tr>    
+        </table>
+        <h3>A témához kapcsolódó videó:</h3>
+        <p><i>Háttértárak videó:</i><button><a href="https://www.youtube.com/watch?v=-PGuCulvrT8&t=863s"><b>Kattints ide!</b></a></button></p>         
 </body>
 <script src="java.js"></script>
 </html>
