--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
             <tr><td>-Felsőbb árkategóriába az SSD olvasási sebessége 540MB/s és az írási sebessége 520MB/s is lehet.</td></tr>    
         </table>
         <h3>A témához kapcsolódó videó:</h3>
-        <p><i>Háttértárak videó:</i><button><a href="https://www.youtube.com/watch?v=-PGuCulvrT8&t=863s"><b>Kattints ide!</b></a></button></p>         
+        <p><i>Háttértárak videó:</i><button><a href="https://www.youtube.com/watch?v=-PGuCulvrT8&t=863s"><b>Kattints ide!</b></a></button></p>
+        <h5>Források:</h5>
+        <ul><li><a href="https://www.usanotebook.hu/blog/mi-a-kulonbseg-az-ssd-es-a-hdd-kozott/448">Forrás1</a></li>
+        <li><a href="https://www.bing.com/images/search?view=detailV2&ccid=B5JC6RoW&id=0304E40E2A8780DF793189FEED20F44009E89EF1&thid=OIP.B5JC6RoWAvelfu2X3uNI6QHaFJ&mediaurl=https%3a%2f%2fpeople.inf.elte.hu%2flearabi%2fwebfejlesztes%2fmerevlemez.jpg&exph=278&expw=400&q=merevlemez&simid=607996962380581497&ck=40A03C01F183750D08B13BA13E99318F&selectedIndex=6&FORM=IRPRST&ajaxhist=0">Kép1</a></li>
+        <li><a href="https://www.bing.com/images/search?view=detailV2&ccid=eGf4EDeW&id=CE293D9DB4180EB2BB2616F7F3644129C2714015&thid=OIP.eGf4EDeWPVu_-uKU2vGBhQHaH2&mediaurl=http%3a%2f%2fs3.amazonaws.com%2fs3.timetoast.com%2fpublic%2fuploads%2fphotos%2f3752788%2ffloppy_disc.jpg%3f1364337382&exph=480&expw=453&q=floppy&simid=608011260399518087&ck=547069976EEEE84A08081660C680C7DD&selectedIndex=2&FORM=IRPRST&ajaxhist=0">Kép2</a></li>
+        <li><a href="https://www.bing.com/images/search?view=detailV2&ccid=xvilrw%2Fa&id=97F6B8B69409947AF3F27F54C70434AE4BD38017&thid=OIP.xvilrw_aI6cZKeQxhOBqEQAAAA&mediaurl=https%3A%2F%2Ftechymikedotcom.files.wordpress.com%2F2016%2F06%2Fcd.jpg&exph=390&expw=387&q=cd-da&simid=608036239897464525&ck=DDDBD2A350DFDA0C06B9BE3A8F1A25FD&selectedindex=2&form=IRPRST&ajaxhist=0&pivotparams=insightsToken%3Dccid_Zc0Zv%252FHc*cp_F8F560EC7141169DEE35061516266F04*mid_438007BA596266E5D2B173A2114902560ADB1BAC*simid_608002850825764887*thid_OIP.Zc0Zv!_Hc-et5!_4EhH8BxDAHaFj&vt=0&sim=11&iss=VSI&ajaxhist=0">Kép3</a></ul>      
 </body>
 <script src="java.js"></script>
 </html>
